hdparm-8.7
	- fixes to permit building against older kernels which lack SG_IO
	- added build script for empeg systems
	- removed -R, -U flags: kernel support is broken and being removed
	- fixed IO_support output
	- prevent error messages from default flags
	- added sysfs.c, geom.c, fibmap.c
	- use sysfs for device start_lba/nsectors values whereever possible (for >= 2TB drives)
	- new standalone --fibmap and --fibmap-sector flags
	- converted -Q to access the queue_depth attribute from sysfs (now works for SATA!)
	- fixed readonly issue with optical drives that some people noticed
hdparm-8.6
	- add partition safeguards to r/w sector and make_bad_sector
hdparm-8.5
	- fix u8->u16 bug in security commands for all of 8.x series, Christian Franke
	- try and quiet errors from flush_buffer_cache()
hdparm-8.4
	- oops: v8.3 broke --write-sector.  Fix it again.
hdparm-8.3
	- fixed -i display for udma6
	- try and exit with errno on fail paths, from Ladislav Michnovic
hdparm-8.2
	- clear feat register for safety with SET_MAX_ADDRESS command
	- add note to manpage regarding possible -N transient failures
	- IDE_TASKFILE bug fixes and cleanups: works with old IDE driver now
	- fix misreporting of dma modes on some SATA-ATAPI bridged drives
hdparm-8.1
	- fixed -U parameter bug
	- added ATA8 minor revision info to -I, courtesy of chrfranke
	- added WorldWideNumber to -I, courtesy of Raksac
hdparm-8.0
	- added --make-bad-sector to deliberately create a media error
	- added --write-sector (aka. --repair-sector) to repair a media error
	- added --read-sector to test for a media error
	- Makefile dependency tweaks
	- added -N (get/set max address/HPA) flag, courtesy of Jakub Bogusz
	- fixed LBAsects output from -i to use LBA48 values when available
	- fixed alternate opcode for SLEEPNOW
	- lots of changes/fixes to sgio.c to support more commands
	- add detection of buggy Sandisk 16MB CF card
	- fixed tf_to_lba() bug, courtesy of Jakub Bogusz
hdparm-7.7