@@ -1,8 +1,9 @@
 Begin4
 Title:		hdparm
-Version:	8.7
-Entered-date:	2008-06-02
+Version:	8.8
+Entered-date:	2008-06-11
 Description:	hdparm - get/set hard disk parameters for Linux IDE drives.
+		v8.8 bug fixes from v8.7, including -r, -a, -Q
 		v8.7 new sysfs support, fibmap, misc fixes
 		v8.6 add partition safeguards to r/w/b sector flags
 		v8.5 fix broken --security-* commands (buggy passwd in all prior 8.x versions)
@@ -71,7 +72,7 @@ Author:		mlord@pobox.com (Mark Lord)
 Maintained-by:	mlord@pobox.com (Mark Lord)
 Primary-site:	http://sourceforge.net/projects/hdparm/
 Alternate-site:	http://www.ibiblio.org/pub/Linux/system/hardware
-		75K hdparm-8.7.tar.gz
+		76K hdparm-8.8.tar.gz
 		1K hdparm.lsm
 Platforms:	Linux, kernels 2.2 through 2.6
 Copying-policy:	BSD License
